sumo/tests/sumo/errors/wauts/cross3ltl_error_missing_waut/errors.sumo
Error: Waut 'w1' was not yet defined.
Quitting (on error).
